# ecsctl

./: .flake8  Makefile  README.md  README.rst  pyproject.toml
.circleci/: config.yml
ecsctl/: __main__.py  api.py  commands.py  config.py  console.py  models.py  serializers.py  utils.py
ecsctl/models/: __init__.py  cluster.py  common.py  instance.py  log.py  service.py  task.py  task_definition.py
ecsctl/serializers/: __init__.py  serialize_cluster.py  serialize_instance.py  serialize_log.py  serialize_service.py  serialize_task.py  serialize_task_definition.py
ecsctl/services/: console.py  ecs.py  logs.py  provider.py
tests/: test_ecs_ctl.py
tests/serializers/: test_serialize_log.py
