[tool.poetry]
name = "ecsctl"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Nick Van Dyck <vandyck.nick@outlook.com>"]

[tool.poetry.scripts]
ecsctl = "ecsctl.__main__:main"
aws-ecsctl = "ecsctl.__main__:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
boto3 = "^1.34.75"
click = "^8.1.7"
tabulate = "^0.9.0"
simple-term-menu = "^1.6.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
pyinstaller = "^6.5.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
types-python-dateutil = "^2.9.0.20240316"
types-tabulate = "^0.9.0.20240106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
